--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -13,12 +13,14 @@ Build-Depends: cmake,
                libignition-common3-dev,
                libignition-gui-dev,
                libignition-math6-dev,
+               libignition-math6-eigen3-dev,
                libignition-msgs3-dev,
                libignition-plugin-dev,
                libignition-physics-dev,
                libignition-sensors-dev,
                libignition-rendering1-dev,
-               libignition-transport6-dev
+               libignition-transport6-dev,
+               libsdformat8-dev
 Vcs-Browser: https://bitbucket.org/ignitionrobotics/ign-gazebo-release
 Vcs-Hg: https://bitbucket.org/ignitionrobotics/ign-gazebo-release
 Homepage: http://ignitionrobotics.org/
@@ -43,12 +45,14 @@ Depends: libgflags-dev,
          libignition-common3-dev,
          libignition-gui-dev,
          libignition-math6-dev,
+         libignition-math6-eigen3-dev,
          libignition-msgs3-dev,
          libignition-plugin-dev,
          libignition-physics-dev,
          libignition-sensors-dev,
          libignition-rendering1-dev,
          libignition-transport6-dev,
+         libsdformat8-dev,
          libignition-gazebo (= ${binary:Version}),
          ${misc:Depends}
 Multi-Arch: same
