--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -18,7 +18,7 @@ Build-Depends: cmake,
                libignition-plugin-dev,
                libignition-physics-dev,
                libignition-sensors-dev,
-               libignition-rendering1-dev,
+               libignition-rendering1-dev | libignition-rendering-dev,
                libignition-transport6-dev,
                libsdformat8-dev
 Vcs-Browser: https://bitbucket.org/ignitionrobotics/ign-gazebo-release
@@ -50,7 +50,7 @@ Depends: libgflags-dev,
          libignition-plugin-dev,
          libignition-physics-dev,
          libignition-sensors-dev,
-         libignition-rendering1-dev,
+         libignition-rendering1-dev | libignition-rendering-dev,
          libignition-transport6-dev,
          libsdformat8-dev,
          libignition-gazebo (= ${binary:Version}),
