Missing fuel-tools3

--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -10,7 +10,9 @@ Build-Depends: cmake,
                libtinyxml2-dev,
                libignition-tools-dev,
                libignition-cmake2-dev,
-               libignition-common3-dev,
+               libignition-common3-profiler-dev,
+               libignition-common3-events-dev,
+               libignition-fuel-tools3-dev,
                libignition-gui-dev,
                libignition-math6-dev,
                libignition-math6-eigen3-dev,
@@ -52,7 +54,9 @@ Depends: libgflags-dev,
          libtinyxml2-dev,
          libignition-tools-dev,
          libignition-cmake2-dev,
-         libignition-common3-dev,
+         libignition-common3-profiler-dev,
+         libignition-common3-events-dev,
+         libignition-fuel-tools3-dev,
          libignition-gui-dev,
          libignition-math6-dev,
          libignition-math6-eigen3-dev,
