--- a/ubuntu/debian/rules
+++ b/ubuntu/debian/rules
@@ -6,6 +6,7 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 .PHONY: override_dh_auto_configure \
+        override_dh_install \
         override_dh_auto_test
 
 %:
@@ -15,6 +16,9 @@ override_dh_auto_configure:
 	dh_auto_configure -- \
 	    -DCMAKE_BUILD_TYPE=RelWithDebInfo
 
+override_dh_install:
+	dh_install --
+	dh_missing --list-missing
 # test cannot run in parallel
 override_dh_auto_test:
 	# failing tests needs inspection
