--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -31,11 +31,15 @@ Package: ignition-gazebo
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
+         libignition-gazebo-plugins (= ${binary:Version})
          libignition-gazebo (= ${binary:Version})
 Multi-Arch: foreign
 Description: Ignition Gazebo classes and functions for robot apps - Binaries
   Ignition Gazebo is a component in the ignition framework, a set of libraries
   designed to rapidly develop robot applications.
+  .
+  Binaries and apps
+
 
 Package: libignition-gazebo
 Architecture: any
@@ -46,6 +50,21 @@ Multi-Arch: same
 Description: Ignition Gazebo classes and functions for robot apps - Shared library
   Ignition Gazebo is a component in the ignition framework, a set of libraries
   designed to rapidly develop robot applications.
+  .
+  Main shared library
+
+
+Package: libignition-gazebo-plugins
+Architecture: any
+Section: libs
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Multi-Arch: same
+Description: Ignition Gazebo classes and functions for robot apps - Plugins
+  Ignition Gazebo is a component in the ignition framework, a set of libraries
+  designed to rapidly develop robot applications.
+  .
+  Plugins collection
 
 Package: libignition-gazebo-dev
 Architecture: any
@@ -73,3 +92,5 @@ Multi-Arch: same
 Description: Ignition Gazebo classes and functions for robot apps - Development files
   Ignition Gazebo is a component in the ignition framework, a set of libraries
   designed to rapidly develop robot applications.
+  .
+  Development files
