Add -dbg package

--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -1,4 +1,4 @@
-Source: ignition-gazebo
+Source: ignition-gazebo2
 Standards-Version: 3.9.8
 Maintainer: Jose Luis Rivero <jrivero@osrfoundation.org>
 Section: science
@@ -27,12 +27,12 @@ Vcs-Browser: https://bitbucket.org/ignitionrobotics/ign-gazebo-release
 Vcs-Hg: https://bitbucket.org/ignitionrobotics/ign-gazebo-release
 Homepage: http://ignitionrobotics.org/
 
-Package: ignition-gazebo
+Package: ignition-gazebo2
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-         libignition-gazebo-plugins (= ${binary:Version}),
-         libignition-gazebo (= ${binary:Version})
+         libignition-gazebo2-plugins (= ${binary:Version}),
+         libignition-gazebo2 (= ${binary:Version})
 Multi-Arch: foreign
 Description: Ignition Gazebo classes and functions for robot apps - Binaries
   Ignition Gazebo is a component in the ignition framework, a set of libraries
@@ -40,8 +40,7 @@ Description: Ignition Gazebo classes and functions for robot apps - Binaries
   .
   Binaries and apps
 
-
-Package: libignition-gazebo
+Package: libignition-gazebo2
 Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
@@ -53,8 +52,7 @@ Description: Ignition Gazebo classes and functions for robot apps - Shared libra
   .
   Main shared library
 
-
-Package: libignition-gazebo-plugins
+Package: libignition-gazebo2-plugins
 Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
@@ -66,7 +64,7 @@ Description: Ignition Gazebo classes and functions for robot apps - Plugins
   .
   Plugins collection
 
-Package: libignition-gazebo-dev
+Package: libignition-gazebo2-dev
 Architecture: any
 Section: libdevel
 Depends: libgflags-dev,
@@ -86,8 +84,8 @@ Depends: libgflags-dev,
          libignition-rendering1-dev | libignition-rendering-dev,
          libignition-transport6-dev,
          libsdformat8-dev,
-         libignition-gazebo (= ${binary:Version}),
-         libignition-gazebo-plugins (= ${binary:Version}),
+         libignition-gazebo2 (= ${binary:Version}),
+         libignition-gazebo2-plugins (= ${binary:Version}),
          ${misc:Depends}
 Multi-Arch: same
 Description: Ignition Gazebo classes and functions for robot apps - Development files
@@ -95,3 +93,17 @@ Description: Ignition Gazebo classes and functions for robot apps - Development 
   designed to rapidly develop robot applications.
   .
   Development files
+
+Package: libignition-gazebo2-dbg
+Architecture: any
+Section: debug
+Priority: extra
+Depends:
+     libignition-gazebo2 (= ${binary:Version}),
+     ${misc:Depends}
+Multi-Arch: same
+Description: Ignition Gazebo classes and functions for robot apps - Debug symbols
+  Ignition Gazebo is a component in the ignition framework, a set of libraries
+  designed to rapidly develop robot applications.
+  .
+  Debug symbols
