--- a/ubuntu/debian/rules
+++ b/ubuntu/debian/rules
@@ -19,8 +19,12 @@ override_dh_auto_configure:
 override_dh_install:
 	dh_install --
 	dh_missing --list-missing
+
 # test cannot run in parallel
 override_dh_auto_test:
 	# failing tests needs inspection
 	# dh_auto_test --max-parallel=1
 	true
+
+override_dh_strip:
+	dh_strip -a --dbg-package=libignition-gazebo2-dbg
