--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -20,7 +20,7 @@ Build-Depends: cmake,
                libignition-plugin-dev,
                libignition-physics-dev,
                libignition-sensors2-dev,
-               libignition-rendering2-dev
+               libignition-rendering2-dev,
                libignition-transport6-dev,
                libsdformat8-dev
 Vcs-Browser: https://bitbucket.org/ignitionrobotics/ign-gazebo-release
@@ -81,7 +81,7 @@ Depends: libgflags-dev,
          libignition-plugin-dev,
          libignition-physics-dev,
          libignition-sensors2-dev,
-         libignition-rendering2-dev
+         libignition-rendering2-dev,
          libignition-transport6-dev,
          libsdformat8-dev,
          libignition-gazebo2 (= ${binary:Version}),
