Change gui dependencies

--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -13,7 +13,7 @@ Build-Depends: cmake,
                libignition-common3-profiler-dev,
                libignition-common3-events-dev,
                libignition-fuel-tools3-dev,
-               libignition-gui-dev,
+               libignition-gui2-dev,
                libignition-math6-dev,
                libignition-math6-eigen3-dev,
                libignition-msgs3-dev,
@@ -74,7 +74,7 @@ Depends: libgflags-dev,
          libignition-common3-profiler-dev,
          libignition-common3-events-dev,
          libignition-fuel-tools3-dev,
-         libignition-gui-dev,
+         libignition-gui2-dev,
          libignition-math6-dev,
          libignition-math6-eigen3-dev,
          libignition-msgs3-dev,
