--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -11,6 +11,7 @@ Build-Depends: cmake,
                libtinyxml2-dev,
                libignition-tools-dev,
                libignition-cmake2-dev,
+               libignition-common3-av-dev,
                libignition-common3-profiler-dev,
                libignition-common3-events-dev,
                libignition-fuel-tools3-dev,
@@ -73,6 +74,7 @@ Depends: libgflags-dev,
          libtinyxml2-dev,
          libignition-tools-dev,
          libignition-cmake2-dev,
+         libignition-common3-av-dev,
          libignition-common3-profiler-dev,
          libignition-common3-events-dev,
          libignition-fuel-tools3-dev,
