--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -15,9 +15,9 @@ Build-Depends: cmake,
                libignition-common3-profiler-dev,
                libignition-common3-events-dev,
                libignition-fuel-tools3-dev,
-               libignition-gui2-dev,
-               libignition-math6-dev,
-               libignition-math6-eigen3-dev,
+               libignition-gui2-dev (>= 2.1.0),
+               libignition-math6-dev (>= 6.2.0),
+               libignition-math6-eigen3-dev (>= 6.2.0),
                libignition-msgs4-dev (>= 4.9.0),
                libignition-plugin-dev,
                libignition-physics-dev (>= 1.7.0),
